--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,13 @@ if(LIGHT_USE_ZSTD)
     find_package(zstd QUIET)
     if (zstd_FOUND)
         # zstd was already found, so we don't resolve our dependency by ourself
-        set(light_zstd_dependency_name zstd::zstd)
+        # Check if dependency was resolved by conan (find_package generator)
+        if (CONAN_ZSTD_ROOT)
+          set(light_zstd_dependency_name zstd::zstd)
+        else()
+          # use the default cmake name
+          set(light_zstd_dependency_name zstd)
+        endif()
     else()
         include(cmake/zstd.cmake)
         if (BUILD_SHARED_LIBS)
