--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,13 +55,16 @@ option(LIGHT_USE_ZSTD "Compile with ZSTD support" ON)
 
 if(LIGHT_USE_ZSTD)
     # Try to find zstd in the cmake search path
-    find_package(zstd QUIET)
+    #find_package(zstd QUIET)
+    find_package(zstd)
     if (zstd_FOUND)
         # zstd was already found, so we don't resolve our dependency by ourself
         # Check if dependency was resolved by conan (find_package generator)
         if (CONAN_ZSTD_ROOT)
+          message(STATUS "Using conan zstd")
           set(light_zstd_dependency_name zstd::zstd)
         else()
+          message(STATUS "Using system zstd")
           # use the default cmake name
           set(light_zstd_dependency_name zstd)
         endif()
