Fixed cmake find_package() error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,12 +61,13 @@ if(LIGHT_USE_ZSTD)
         # zstd was already found, so we don't resolve our dependency by ourself
         # Check if dependency was resolved by conan (find_package generator)
         if (CONAN_ZSTD_ROOT)
-          message(STATUS "Using conan zstd")
           set(light_zstd_dependency_name zstd::zstd)
         else()
-          message(STATUS "Using system zstd")
-          # use the default cmake name
-          set(light_zstd_dependency_name zstd)
+          if (BUILD_SHARED_LIBS)
+            set(light_zstd_dependency_name zstd::libzstd_shared)
+          else()
+            set(light_zstd_dependency_name zstd::libzstd_static)
+          endif()
         endif()
     else()
         include(cmake/zstd.cmake)
